Resolve update modal horizontal scroll

--- a/src/components/UpdatePostModal.module.css
+++ b/src/components/UpdatePostModal.module.css
@@ -17,6 +17,7 @@
   width: 80%;
   z-index: 100;
   overflow-y: scroll;
+  overflow-x: hidden;
   border-radius: 10px;
 }
 
@@ -30,5 +31,5 @@
 }
 
 .footer button {
-  margin: 5px;
+  margin: 10px 5px;
 }
